# Arkhe

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  AWS_PLAN.md  BACKEND_IMPLEMENTATION_PLAN.md  BACKEND_INTEGRATION_STATUS.md  CLAUDE.md  CONTRIBUTING.md  DEBUGGING_GUIDE.md  Dockerfile  INTEGRATION_GUIDE.md  LICENSE  PLAN.md  PROJECT_STATUS.md  README.md  ROADMAP.md  SPRINT_PLAN.md  TALKING_POINTS.txt  docker-compose.yml  main.py  march_24_plan.txt  options.env  presentation.html  pyproject.toml
.github/workflows/: ci.yml
Deeper format/Deeper Format stage 2/: deepest_2.txt
agents/: analyst_agent.py  dead_code_agent.py  embed_agent.py  impact_agent.py  parser_agent.py  refactor_agent.py  report_agent.py  security_agent.py  synthesizer_agent.py  test_gap_agent.py  visualizer_agent.py
cache/: db.py  pipeline_cache.py
commands/: diff.py  watch.py
config/: backends.py  dispatcher.py  llm_client.py  model_router.py  settings.py
duo/: flow.yml
flows/: arkhe.yml  flow.yml
hackathon/: AGENTS.md  CLAUDE.md  ROADMAP.md
hackathon/agents/: agent.yml
hackathon/flows/: flow.yml
integrations/: __init__.py  aws_db.py  aws_storage.py  base.py  exceptions.py  logging.py  supabase_db.py  supabase_storage.py
output/: clone_writer.py  map_writer.py  report_writer.py
scripts/: clone_repo.py  scan_codebase.py
server/: app.py  auth_supabase.py
server/static/: arkhe.css  manifest.json
server/templates/: admin.html  admin_login.html  context.html  debug_index.html  debug_job.html  gate.html  impact.html  index.html  login.html  map_viewer.html  pricing.html  report_viewer.html  results.html  settings_keys.html  signup.html
templates/: dependency_map.html
tests/: test_api_endpoints.py  test_backends.py  test_model_router.py  test_settings.py
